[FIX] web,mail,html_editor: translation button align. on {char,text} fields
In x2many form field, the translation feature appears at the end of the
row and hovers some data.

This commit fixes it by ensuring that the element is positioned
relatively to its container (cf. the translatable field).

This commit also refactors the css related to the char_field and
text_field translation buttons to avoid negative margins but also to
simplify the css.

task-4273364

closes odoo/odoo#184900

--- a/addons/web/static/src/views/fields/text/text_field.scss
+++ b/addons/web/static/src/views/fields/text/text_field.scss
@@ -1,24 +1,5 @@
-.o_field_text > div {
-    > textarea {
-        height: auto;
-        resize: none;
-        overflow-y: hidden;
-    }
-}
-.o_field_text_buttons {
-    float: right;
-    margin-left: -35px;
-    margin-right: 10px;
-    margin-top: -40px;
-
-    .o_field_translate {
-        margin-left: 0 !important;
-    }
-}
-
-.o_field_text {
-    textarea.o_field_translate:hover + .o_field_text_buttons .o_field_translate,
-    textarea.o_field_translate:focus + .o_field_text_buttons .o_field_translate {
-        visibility: visible;
-    }
+.o_field_text > div > textarea {
+    height: auto;
+    resize: none;
+    overflow-y: hidden;
 }
