--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -632,39 +632,6 @@
         margin-bottom: 1px;
     }
 
-    // Translate icon
-    span.o_field_translate {
-            padding: 0 $o-form-spacing-unit 0 0 !important;
-            vertical-align: top;
-            position: relative;
-            margin-left: -35px;
-            width: 35px !important; // important is usefull for textarea
-            display: inline-block;
-            text-align: right;
-            border: none;  // usefull for textarea
-            visibility: hidden;
-    }
-
-    div {
-        div:focus-within > div.o_field_char_buttons > span.o_field_translate,
-        div:hover > div.o_field_char_buttons > span.o_field_translate {
-            visibility: visible !important;
-        }
-    }
-
-    div {
-        div:focus-within > span.o_field_translate,
-        div:hover > span.o_field_translate {
-            visibility: visible !important;
-        }
-    }
-
-    input, textarea {
-        &.o_field_translate {
-            padding-right: 25px;
-        }
-    }
-
     .oe_no_translation_content {
         // hide content but show the translate button
         height: 0px;
@@ -689,7 +656,7 @@
     }
 
     iframe.wysiwyg_iframe + .o_field_translate {
-        right: 30px !important;
+        right: $o-field-translate-padding !important;
         top: 7px !important;
     }
 
